@@ -1,3 +1,8 @@
+2012-10-29 dschulze@adobe.com
+	Add 'none' as keyword for 'mask-clip'.
+	Deprecate 'clip'.
+	Clean up issues.
+
 2012-10-27 dschulze@adobe.com
 	Add origin restriction for resources.
 
